fix: make plot borders more visible in landscape mode

--- a/src/components/Field/Field.sass
+++ b/src/components/Field/Field.sass
@@ -54,8 +54,9 @@ $appBarOffset: 135px
       image-rendering: pixelated
 
       @media (orientation: landscape)
-        transform: translateY(-32.5%) scale(0.5) rotate(-90deg)
+        border-width: 2px
         margin-bottom: -98%;
+        transform: translateY(-32.5%) scale(0.5) rotate(-90deg)
 
   &[data-purchased-field="1"]
     .react-transform-element
