--- a/src/components/Plot/Plot.sass
+++ b/src/components/Plot/Plot.sass
@@ -13,6 +13,7 @@
   image-rendering: pixelated
 
   @media (orientation: landscape)
+    border-width: 2px
     transform: rotate(90deg)
 
   &:hover
